<resources>
    <string name="app_name">QuanLyTinhLuong</string>
    <string name="title_activity_main_login">MainActivityLogin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="luu">Lưu</string>
    <string name="mo">Mở</string>
    <string name="thoat">Đóng ứng dụng</string>
    <string name="them">Thêm</string>
    <string name="xoa">Xóa</string>
    <string name="sua">Sửa</string>
    <string name="clear">Làm mới</string>
    <string name="manv">Mã Nhân viên</string>
    <string name="tennv">Họ tên</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="mapb">Nhập phòng làm việc</string>
    <string name="tenpb">Phòng ban</string>
    <string name="luongcoban">Lương cơ bản</string>
    <string name="tieude_nv">Danh Sách Nhân Viên</string>
    <string name="tieude_addnv">Thêm Nhân Viên</string>
    <string name="tieude_update">Sửa thông tin Nhân Viên</string>
    <string name="id">Mã NV:</string>
    <string name="name">Họ tên:</string>
    <string name="birth">Ngày sinh:</string>
    <string name="room">Phòng ban</string>
    <string name="salary">Lương:</string>
    <string name="employee_list">Nhân Viên</string>
    <string name="checkout">Chấm Công</string>
    <string name="advance_payment">Tạm Ứng</string>
    <string name="summary">Thống Kê</string>
    <string name="aboutus">Thông tin Ứng dụng</string>
    <string name="lang_en" translatable="false">English</string>
    <string name="lang_vi" translatable="false">Tiếng Việt</string>
    <string name="themPB">Thêm phòng ban</string>
    <string name="suaPB">Sửa phòng ban</string>
    <string name="nhapMP">Mã phòng</string>
    <string name="nhapTP">Tên phòng</string>
    <string name="danhsachPB">Danh sách phòng ban</string>
    <string name="danhsachCC">Danh sách chấm công</string>
    <string name="suaCC">Sửa chấm công</string>
    <string name="danhsachTU">Danh sách tạm ứng</string>
    <string name="suaTU">Sửa tạm ứng</string>
    <string name="thongke">Thống kê</string>
    <string name="themCC">Chấm công</string>
    <string name="themTU">Tạm ứng</string>
    <string name="nhapNGS">Ngày chấm công</string>
    <string name="nhapSNC">Số ngày công</string>
    <string name="nhapNgay">Ngày</string>
    <string name="nhapSP">Số phiếu</string>
    <string name="nhapST">Số tiền</string>
    <string name="tv_manv">Mã Nhân Viên</string>
    <string name="logo_name">EMSAMA</string>
    <string name="user">Tên Đăng Nhập</string>
    <string name="pw">Mật khẩu</string>
    <string name="login">Đăng Nhập</string>
    <string name="ngaychamcong">Ngày chấm công</string>
    <string name="ngaytamung">Ngày tạm ứng</string>
    <string name="sotienung">Số tiền ứng</string>
    <string name="gioitinh">"Giới tính "</string>
    <string name="songaycong">Số ngày công</string>
    <string name="sophieu">ID Payment</string>
    <string name="updateChamCong">Edit Checkout</string>
    <string name="thuclanh">Real Earning</string>
    <string name="chitiet">Detail</string>
    <string name="bieudo">Chart</string>
    <string name="filter">Filter</string>
    <string name="tongluong">Total</string>
    <string name="department">Department</string>
    <string name="hesoluong">Hệ số lương</string>
    <string name="lienhe">About Us</string>
    <string name="member">"Thành viên: "</string>
    <string name="tenud">"Tên Ứng dụng: "</string>
    <string name="version">Version</string>
    <string name="email">"Email: "</string>
    <string name="dt">Số điện thoại</string>
    <string name="title_activity_lien_he">Map</string>
    <string name="nhom">Nhóm</string>
</resources>