<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="133dp">
        <ImageView
            android:id="@+id/imgHinhDaiDien"
            android:layout_gravity="center"
            android:src="@drawable/man"
            android:layout_width="100dp"
            android:layout_height="130dp"/>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/playfairdisplay_italic"
                    style="@style/tv_noidung"
                    android:layout_width="96dp"
                    android:text="@string/manv" />
                <TextView
                    android:id="@+id/tvMaNV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/tv_noidung" />
            </LinearLayout>

            <LinearLayout
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/playfairdisplay_italic"
                    style="@style/tv_noidung"
                    android:layout_width="96dp"
                    android:text="@string/tennv" />
                <TextView
                    android:id="@+id/tvTenNV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/tv_noidung" />
            </LinearLayout>

            <LinearLayout
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/playfairdisplay_italic"
                    style="@style/tv_noidung"
                    android:layout_width="96dp"
                    android:text="@string/birth" />
                <TextView
                    android:id="@+id/tvNgaySinh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/tv_noidung" />
            </LinearLayout>

            <LinearLayout
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/playfairdisplay_italic"
                    style="@style/tv_noidung"
                    android:layout_width="96dp"
                    android:text="@string/gioitinh" />
                <TextView
                    android:id="@+id/tvGioiTinh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/tv_noidung" />
            </LinearLayout>

            <LinearLayout
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/playfairdisplay_italic"
                    style="@style/tv_noidung"
                    android:layout_width="96dp"
                    android:text="Phòng ban" />
                <TextView
                    android:id="@+id/tvPhongBan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/tv_noidung" />
            </LinearLayout>

            <LinearLayout
                android:paddingLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/playfairdisplay_italic"
                    style="@style/tv_noidung"
                    android:layout_width="96dp"
                    android:text="@string/hesoluong" />
                <TextView
                    android:id="@+id/tvLuong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/tv_noidung" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnXoa"
            android:text="Xóa"
            android:background="@drawable/img_button"
            android:layout_width="90dp"
            android:layout_height="40dp"/>
        <Button
            android:id="@+id/btnSua"
            android:text="Sửa"
            android:background="@drawable/img_button"
            android:layout_marginLeft="3dp"
            android:layout_width="90dp"
            android:layout_height="40dp"/>
        <Button
            android:id="@+id/btnChamCong"
            android:text="Chấm Công"
            android:background="@drawable/img_button"
            android:layout_marginLeft="3dp"
            android:layout_width="90dp"
            android:layout_height="40dp"/>
        <Button
            android:id="@+id/btnTamUng"
            android:text="Tạm Ứng"
            android:background="@drawable/img_button"
            android:layout_marginLeft="3dp"
            android:layout_width="90dp"
            android:layout_height="40dp"/>

    </LinearLayout>


</LinearLayout>